reflection fixed div with overflow auto

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
@@ -15,6 +16,23 @@
 	margin: 0;
 	padding: 0;
 	outline: none;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 10px var(--dark);
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background: var(--light);
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: var(--link);
 }
 
 html {
@@ -94,23 +112,6 @@ body {
 
 	.sorry, .mobile-nav {
 		display: none;
-	}
-
-	::-webkit-scrollbar {
-		width: 10px;
-	}
-
-	::-webkit-scrollbar-track {
-		box-shadow: inset 0 0 10px var(--dark);
-	}
-
-	::-webkit-scrollbar-thumb {
-		border-radius: 5px;
-		background: var(--light);
-	}
-
-	::-webkit-scrollbar-thumb:hover {
-		background: var(--link);
 	}
 
 	.main-nav {
@@ -1004,20 +1005,18 @@ body {
 		position: absolute;
 		bottom: 0;
 		left: 0;
-		opacity: 0;
-		height: 50%;
-		width: 100%;
 		visibility: hidden;
+		opacity: 0;
+		height: 0%;
+		width: 100%;
 		cursor: pointer;
 		background: var(--black);
 		color: var(--light);
 		font-family: var(--sub);
 		padding: 1em;
-		display: flex;
-		justify-content: center;
-		align-items: center;
 		flex-direction: column;
 		font-size: 100%;
+		overflow: auto;
 	}
 
 	#reflections #images .image div h1 {
@@ -1033,6 +1032,7 @@ body {
 		visibility: visible;
 		opacity: .8;
 		transition-duration: .5s;
+		z-index: 10;
 	}
 
 	/***************************************************************************************************
@@ -1954,8 +1954,9 @@ body {
 	#reflections #images .image {
 		position: relative;
 		transition-duration: .5s;
-		min-width: 15em;
-		min-height: 15em;
+		width: 100vw;
+		max-width: 90%;
+		height: 50vh;
 	}
 
 	#reflections #images .image img {
@@ -1967,24 +1968,21 @@ body {
 	}
 
 	#reflections #images .image div {
-		padding: 0 2em;
 		position: absolute;
 		bottom: 0;
 		left: 0;
-		width: 100%;
-		height: 2%;
-		font-size: 80%;
 		visibility: hidden;
 		opacity: 0;
+		height: 0%;
+		width: 100%;
 		cursor: pointer;
 		background: var(--black);
 		color: var(--light);
 		font-family: var(--sub);
-		display: flex;
-		justify-content: center;
-		align-items: center;
+		padding: 1em;
 		flex-direction: column;
 		font-size: 100%;
+		overflow: auto;
 	}
 
 	#reflections #images .image div h1 {
